[FIX] : update alignment and styles in AppConfig and data-source-item
* fix cluster name styles

--- a/dbeast-monitoring-for-elastic-stack-app-container/src/components/AppConfig/AppConfig.scss
+++ b/dbeast-monitoring-for-elastic-stack-app-container/src/components/AppConfig/AppConfig.scss
@@ -4,7 +4,7 @@
   row-gap: 10px;
   flex-wrap: wrap;
   margin-block-start: 10px;
-  align-self: flex-end;
+  align-self: flex-start;
 
 
   button
